--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,3 +1,9 @@
 {
-    "feur": "FEUR"
+    "navbar": {
+        "explore": "Explore",
+        "start": "Start scripting",
+        "search": "Search",
+        "login": "Log in",
+        "signup": "Sign up"
+    }
 }
