--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,9 +1,9 @@
 {
-    "navbar": {
-        "explore": "Explore",
-        "start": "Start scripting",
-        "search": "Search",
-        "login": "Log in",
-        "signup": "Sign up"
-    }
+  "navbar": {
+    "explore": "Search",
+    "start": "Start scripting",
+    "search": "Search",
+    "login": "Log in",
+    "signup": "Sign up"
+  }
 }
