--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -30,6 +30,11 @@
     "open": "Ouvrir"
   },
   "snackbar": {
+    "connect-calculator": {
+      "calculator-not-connected": "La calculatrice n'est pas connectée",
+      "detect-calculator": "Détecter la calculatrice",
+      "dialog-details": "Vous devez connecter votre calculatrice à votre ordinateur pour pouvoir utiliser cette fonctionnalité. Appuyez sur le bouton de connexion ci-dessous pour connecter votre calculatrice."
+    },
     "close": "Fermer"
   },
   "app": {
