[Register] Feedback when created, username taken warning and generic error handling

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -62,6 +62,12 @@
     "generic-error": {
       "message": "An unexpected error occurred"
     },
+    "account-created": {
+      "message": "Account created successfully"
+    },
+    "username-taken": {
+      "message": "Username already taken"
+    },
     "installation-success": "Installation successful",
     "close": "Close"
   },
