[Editor] Add Snackbar on script save/error

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -68,6 +68,9 @@
     "username-taken": {
       "message": "Username already taken"
     },
+    "script-saved": {
+      "message": "Script saved successfully"
+    },
     "installation-success": "Installation successful",
     "close": "Close"
   },
