--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -67,6 +67,9 @@
     "username-taken": {
       "message": "Nom d'utilisateur déjà pris"
     },
+    "script-saved": {
+      "message": "Script enregistré"
+    },
     "installation-success": "Installation réussie",
     "close": "Fermer"
   },
