--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -84,6 +84,7 @@
     "title": "Create a new project",
     "name": "Project name",
     "language": "Language",
-    "create": "Create"
+    "create": "Create",
+    "is-public": "Public"
   }
 }
