[Viewer] Allow script deletion

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -77,6 +77,9 @@
     "project-created": {
       "message": "Project created successfully"
     },
+    "project-deleted": {
+      "message": "Project deleted successfully"
+    },
     "installation-success": "Installation successful",
     "close": "Close"
   },
