[DeleteConfirm] Snackbar on success

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -81,6 +81,9 @@
       },
       "installation-success": {
         "message": "Installation successful"
+      },
+      "script-deleted": {
+        "message": "Script deleted successfully"
       }
     },
     "username-taken": {
