[DisconnectConfirm] Add snackbar on logout

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -84,6 +84,9 @@
       },
       "script-deleted": {
         "message": "Script deleted successfully"
+      },
+      "logout": {
+        "message": "Logged out successfully"
       }
     },
     "username-taken": {
