--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -1,30 +1,4 @@
 {
-  "editor": {
-    "device": "Calculatrice",
-    "add-script": {
-      "add": "OK",
-      "enter-name": "Entrez le nouveau nom pour ce script :",
-      "cancel": "Annuler",
-      "name": "Nom",
-      "title": "Ajouter un script"
-    },
-    "change-script": {
-      "cancel": "Annuler",
-      "delete": "Supprimer",
-      "description": "Entrez le nouveau pour ce script :",
-      "new-name": "Nouveau nom",
-      "rename": "Renommer",
-      "title": "Renommer"
-    },
-    "edit-project-info": "Éditer les infomations du projet",
-    "monaco-editor": {
-      "add-script-tooltip": "Ajouter un script",
-      "run-tooltip": "Exécuter le projet",
-      "save-tooltip": "Enregistrer le projet",
-      "change-tooltip": "Cliquez ici pour renommer ou supprimer"
-    },
-    "simulator": "Simulateur"
-  },
   "about": {
     "title": "À propos"
   },
@@ -51,11 +25,43 @@
     "name": "Nom du projet",
     "title": "Créer un nouveau projet"
   },
+  "editor": {
+    "add-script": {
+      "add": "OK",
+      "cancel": "Annuler",
+      "enter-name": "Entrez le nouveau nom pour ce script :",
+      "name": "Nom",
+      "title": "Ajouter un script"
+    },
+    "change-script": {
+      "cancel": "Annuler",
+      "delete": "Supprimer",
+      "description": "Entrez le nouveau pour ce script :",
+      "extension-invalid": "L'extension du script ne peut contenir que des lettres, des nombres et es {'_'}",
+      "extension-required": "Le nom du script doit avoir une extension",
+      "name-invalid": "Le nom du script ne peut contenir que des lettres, des nombres et des {'_'}",
+      "name-required": "Le nom du script est requis",
+      "name-starts-with-number": "Le nom du script ne peut pas démarrer par un nombre",
+      "name-taken": "Le nom du script est déjà pris",
+      "new-name": "Nouveau nom",
+      "rename": "Renommer",
+      "title": "Renommer"
+    },
+    "device": "Calculatrice",
+    "edit-project-info": "Éditer les infomations du projet",
+    "monaco-editor": {
+      "add-script-tooltip": "Ajouter un script",
+      "change-tooltip": "Cliquez ici pour renommer ou supprimer",
+      "run-tooltip": "Exécuter le projet",
+      "save-tooltip": "Enregistrer le projet"
+    },
+    "simulator": "Simulateur"
+  },
   "login": {
     "close": "Fermer",
+    "error": "Nom d'utilisateur ou mot de passe invalide",
     "password": "Mot de passe",
     "register": "Vous n'avez pas de compte ? Créez-en un",
-    "error": "Nom d'utilisateur ou mot de passe invalide",
     "submit": "Se connecter",
     "title": "Connexion",
     "username": "Nom d'utilisateur"
