[i18n] Fix edit project info length in french

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -53,7 +53,7 @@
       "title": "Renommer"
     },
     "device": "Calculatrice",
-    "edit-project-info": "Éditer les infomations du projet",
+    "edit-project-info": "Éditer les infos du projet",
     "monaco-editor": {
       "add-script-tooltip": "Ajouter un script",
       "change-tooltip": "Cliquez ici pour renommer ou supprimer",
