--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -183,6 +183,8 @@
     "modified-on": "Last modified on {date}",
     "upload": "Upload to calculator",
     "version": "Version {version}",
-    "views": "{count} views"
+    "views": "{count} views",
+    "simulator-launch": "Launch the simulator",
+    "simulator-stop": "Stop the simulator"
   }
 }
