[Editor] Change view project info text

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -85,7 +85,7 @@
       "save-tooltip": "Save project"
     },
     "simulator": "Simulator",
-    "view-project-info": "View project info"
+    "view-project-info": "Back to project info"
   },
   "login": {
     "close": "Close",
