--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -85,7 +85,7 @@
       "save-tooltip": "Enregistrer le projet"
     },
     "simulator": "Simulateur",
-    "view-project-info": "Voir les infos du projet"
+    "view-project-info": "Retour aux infos du projet"
   },
   "login": {
     "close": "Fermer",
