--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -28,6 +28,16 @@
     "is-public": "Public",
     "language": "Language",
     "name": "Project name",
+    "rules": {
+      "language": {
+        "invalid": "Language must be one of the following: python, micropython-khicas, xcas-python-pow, xcas-python-xor, xcas, xcas-session",
+        "required": "Language is required"
+      },
+      "name": {
+        "length": "Project name must be less than 100 characters",
+        "required": "Project name is required"
+      }
+    },
     "title": "Create a new project"
   },
   "disconnect-confirm": {
